Добавлено описание протокола Деннига-Сакко

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -406,6 +406,24 @@
 	language	= {English},
 }
 
+@article{Denning:Sacco:1981,
+    author      = {Denning, Dorothy E. and Sacco, Giovanni Maria},
+    title       = {Timestamps in Key Distribution Protocols},
+    journal     = {Commun. ACM},
+    issue_date  = {Aug. 1981},
+    volume      = {24},
+    number      = {8},
+    month       = {8},
+    year        = {1981},
+    issn        = {0001-0782},
+    pages       = {533--536},
+    numpages    = {4},
+    url         = {http://pages.cs.wisc.edu/~remzi/Classes/736/Spring2005/Papers/data-encryption-denning.pdf},
+    doi         = {10.1145/358722.358740},
+    publisher   = {ACM},
+    address     = {New York, NY, USA},
+} 
+
 @inproceedings{Yao:1982,
 	author		= {Yao, Andrew Chi-Chih},
 	title		= {Theory and Applications of Trapdoor Functions (Extended Abstract)},
