Мелкие исправления и добавление ссылок к протоколу Ву-Лама

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -749,6 +749,7 @@
 	pages		= {128--132},
 	language	= {English},
 }
+
 @incollection{Girault:1991,
 	author		= {Girault, Marc},
 	title		= {Self-Certified Public Keys},
@@ -762,6 +763,31 @@
 	isbn		= {978-3-540-54620-7},
 	doi		= {10.1007/3-540-46416-6_42},
 	language	= {English}
+}
+
+@article{Woo:Lam:1992:1,
+    author      = {Woo, Thomas Y. C. and Lam, Simon S.},
+    journal     = {Computer},
+    title       = {Authentication for distributed systems},
+    year        = {1992},
+    volume      = {25},
+    number      = {1},
+    pages       = {39--52},
+    doi         = {10.1109/2.108052},
+    month       = {1},
+    url         = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.76.4731&rep=rep1&type=pdf},
+}
+
+@article{Woo:Lam:1992:3,
+    author      = {Woo, Thomas Y. C. and Lam, Simon S.},
+    journal     = {Computer},
+    title       = {'Authentication' revisited (correction and addendum to 'Authentication' for distributed systems, Jan. 92, 39-52)},
+    year        = {1992},
+    volume      = {25},
+    number      = {3},
+    pages       = {10},
+    doi         = {10.1109/2.121502},
+    month       = {3},
 }
 
 @article{Diffie:Oorschot:Wiener:1992,
