--- a/protocols/woo-lam.tex
+++ b/protocols/woo-lam.tex
@@ -1,12 +1,12 @@
-\subsection{Протокол Ву~---~Лама}\index{протокол!Ву~---~Лама|(}\label{section-woo-lama}
+\subsection{Протокол Ву~---~Лама}\index{протокол!Ву~---~Лама|(}\label{section-woo-lam}
 \selectlanguage{russian}
 
-Протокол Ву~---~Лама, предложенный в 1992 году, добавляет к сообщениям случайные числа участников, что позволяет защитить протокол в том числе от атак повтором, а также обеспечивает подтверждение владения сессионным ключом для одной из сторон. Также это единственный из рассмотренных в этом разделе протоколов, в котором новый ключ формируется доверенной стороной (Трентом).
+Протокол Ву~---~Лама, предложенный в 1992 году (\langen{Woo, Lam},~\cite{Woo:Lam:1992:1, Woo:Lam:1992:3}), добавляет к сообщениям случайные числа участников, что позволяет защитить протокол в том числе от атак повтором, а также обеспечивает подтверждение владения ключами. Также это единственный из рассмотренных в этом разделе протоколов, в котором новый ключ формируется доверенной стороной (Трентом).
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.5\textwidth]{pic/woo-lama}
-    \caption{Взаимодействие участников в протоколе Ву~---~Лама\label{fig:woo-lama}}
+    \includegraphics[width=0.5\textwidth]{pic/woo-lam}
+    \caption{Взаимодействие участников в протоколе Ву~---~Лама\label{fig:woo-lam}}
 \end{figure}
 
 \begin{protocol}
