Более полные имена авторов протокола Ву-Лама

--- a/protocols/woo-lam.tex
+++ b/protocols/woo-lam.tex
@@ -1,7 +1,7 @@
 \subsection{Протокол Ву~---~Лама}\index{протокол!Ву~---~Лама|(}\label{section-woo-lam}
 \selectlanguage{russian}
 
-Протокол Ву~---~Лама, предложенный в 1992 году (\langen{Woo, Lam},~\cite{Woo:Lam:1992:1, Woo:Lam:1992:3}), добавляет к сообщениям случайные числа участников, что позволяет защитить протокол в том числе от атак повтором, а также обеспечивает подтверждение владения ключами. Также это единственный из рассмотренных в этом разделе протоколов, в котором новый ключ формируется доверенной стороной (Трентом).
+Протокол Ву~---~Лама, предложенный в 1992 году (\langen{Thomas Y. C. Woo, Simon S. Lam},~\cite{Woo:Lam:1992:1, Woo:Lam:1992:3}), добавляет к сообщениям случайные числа участников, что позволяет защитить протокол в том числе от атак повтором, а также обеспечивает подтверждение владения ключами. Также это единственный из рассмотренных в этом разделе протоколов, в котором новый ключ формируется доверенной стороной (Трентом).
 
 \begin{figure}
     \centering
