небольшие исправления для предметного указателя

--- a/appendix/groups_of_ec_points_over_finite_fields.tex
+++ b/appendix/groups_of_ec_points_over_finite_fields.tex
@@ -1,4 +1,4 @@
-\section{Группа точек эллиптической кривой над полем}\label{section-math-ec-groups}
+\section{Группа точек эллиптической кривой над полем}\label{section-math-ec-groups}\index{группа!точек эллиптической кривой|(}
 \selectlanguage{russian}
 
 \subsection{Группы точек на эллиптических кривых}
@@ -66,7 +66,7 @@
         \[ -P = P, ~ P + P = O. \]
 \end{enumerate}
 
-Все точки эллиптической кривой, а также точка $O$ образуют коммутативную группу $\E(\R)$ относительно введённой операции сложения, то есть выполняются законы коммутативной группы\index{группа!точек эллиптической кривой}:
+Все точки эллиптической кривой, а также точка $O$ образуют коммутативную группу\index{группа!коммутативная} $\E(\R)$ относительно введённой операции сложения, то есть выполняются законы коммутативной группы:
 \begin{itemize}
     \item сумма точек $P + Q$ лежит на эллиптической кривой;
     \item существует нулевой элемент -- это точка $O$ на бесконечности:
@@ -260,3 +260,5 @@
     \end{tabular}
     }
 \end{table}
+
+\index{группа!точек эллиптической кривой|)}
