--- a/protocols/attacks.tex
+++ b/protocols/attacks.tex
@@ -18,11 +18,11 @@
 
     \item[Replay] Атака с повторной передачей\\*
         \langen{replay attack}
-    \item[{}] Класс атак, в котором злоумышленник записывает все сообщения, проходящие в одном сеансе протокола, а далее повторяет их в новом, выдавая себя за одного из участников первого сеанса. Примерами протоколов, к которым применима данная атака, являются протоколы Ву-Лама\index{протокол!Ву-Лама} и бесключевой протокол Шамира\index{протокол!Шамира бесключевой} из раздела~\ref{section-protocols-shamir}.
+    \item[{}] Класс атак, в котором злоумышленник записывает все сообщения, проходящие в одном сеансе протокола, а далее повторяет их в новом, выдавая себя за одного из участников первого сеанса. Примерами протоколов, к которым применима данная атака, являются протоколы Ву~---~Лама\index{протокол!Ву~---~Лама} и бесключевой протокол Шамира\index{протокол!Шамира бесключевой} из раздела~\ref{section-protocols-shamir}.
 
     \item[TF] Атака подмены типа\\*
         \langen{type flaw attack}
-    \item[{}] Класс атак, в котором злоумышленник используя переданное в легальном сеансе протокола сообщение конструирует новое, передавая его на другом проходе (раунде) протокола под видом сообщения другого типа (с другим предназначением). К таким атакам уязвимы, например, протоколы Wide-Mouth Frog\index{протокол!Wide-Mouth Frog} из раздела~\ref{section-protocols-wide-moth-frog}, Деннинга~---~Сако\index{протокол!Деннинга~---~Сако}, Отвей~---~Рииса\index{протокол!Отвей~---~Рииса}, а также некоторые варианты протокола Yahalom\index{протокол!Yahalom}.
+    \item[{}] Класс атак, в котором злоумышленник используя переданное в легальном сеансе протокола сообщение конструирует новое, передавая его на другом проходе (раунде) протокола под видом сообщения другого типа (с другим предназначением). К таким атакам уязвимы, например, протоколы Wide-Mouth Frog\index{протокол!Wide-Mouth Frog} из раздела~\ref{section-protocols-wide-moth-frog}, Деннинга~---~Сакко\index{протокол!Деннинга~---~Сакко}, Отвей~---~Рииса\index{протокол!Отвей~---~Рииса}, а также некоторые варианты протокола Yahalom\index{протокол!Yahalom}.
 
     \item[PS] Атака с параллельными сеансами\\*
         \langen{parallel-session attack}
