--- a/protocols/diffie-hellman.tex
+++ b/protocols/diffie-hellman.tex
@@ -1,4 +1,4 @@
-\subsection{Протокол Диффи~---~Хеллмана}\index{протокол!Диффи~---~Хеллмана|(}\label{section-protocols-diffie-hellman}
+\subsection{Протокол Диффи~---~Хеллмана}\index{протокол!Диффи~---~Хеллмана|(}\index{схема!Диффи~---~Хеллмана|(}\label{section-protocols-diffie-hellman}
 \selectlanguage{russian}
 
 Первый алгоритм с открытым ключом был предложен Диффи и Хеллманом в работе 1976 года <<Новые направления в криптографии>> (\langen{Bailey Whitfield Diffie, Martin Edward Hellman, ``New directions in cryptography''},~\cite{Diffie:Hellman:1976}). Данный протокол, который также можно назвать \emph{схемой Диффи~---~Хеллмана}, стал первым, позволивший уменьшить требования к каналу связи для установления защищённого соединения без предварительного обмена ключами.
@@ -72,4 +72,4 @@
 
 В качестве нового сессионного ключа стороны могут выбрать, например, первую координату найденной точки $K$.
 
-\index{протокол!Диффи~---~Хеллмана|)}
+\index{протокол!Диффи~---~Хеллмана|)}\index{схема!Диффи~---~Хеллмана|)}
