--- a/protocols/key-distribution-schemas.tex
+++ b/protocols/key-distribution-schemas.tex
@@ -1,10 +1,10 @@
-\section{Схемы с доверенным центром}\label{key-distribution-schemas}\index{схема!распределения ключей!(}
+\section{Схемы с доверенным центром}\label{key-distribution-schemas}\index{схема!распределения ключей|(}
 \selectlanguage{russian}
 
 Схемы распределения ключей с доверенным центром состоят из трёх этапов.
 
 \begin{enumerate}
-    \item На первом этапе доверенный центр создаёт некоторый секрет, известный только ему. Это может быть некоторая секретная матрица с особыми свойствами, как в схеме Блома из раздела~\ref{section-bloms-scheme}, или пара из закрытого и открытого ключей, как в схеме Жиро из раздела~\ref{section-girault-scheme}.
+    \item На первом этапе доверенный центр создаёт некоторый секрет, известный только ему. Это может быть некоторая секретная матрица с особыми свойствами, как в схеме Блома\index{схема!Блома} из раздела~\ref{section-bloms-scheme}, или пара из закрытого и открытого ключей, как в схеме Жиро\index{схема!Жиро} из раздела~\ref{section-girault-scheme}.
     \item Для каждого нового легального участника сети доверенный центр, используя свою секретную информацию, вырабатывает некоторый отпечаток или сертификат, который позволяет новому участнику вырабатывать сеансовые ключи с другими легальными участниками.
     \item Наконец, на третьем этапе, когда начинается протокол общения двух легальных участников, они предъявляют друг-другу идентификаторы и/или дополнительную информацию от доверенного центра. Используя её, без дополнительного обращения к центру, они могут сгенерировать секретный сеансовый ключ для общения между собой.
 \end{enumerate}
@@ -13,4 +13,4 @@
 
 \input{bloms_scheme}
 
-\index{схема!распределения ключей!)}
+\index{схема!распределения ключей|)}
