--- a/secret-sharing-brickells.tex
+++ b/secret-sharing-brickells.tex
@@ -1,7 +1,7 @@
-\subsection{Схема Брикелла для нескольких коалиций}\index{схема распределение секрета!Бриккела|(}
+\subsection{Схема Брикелла для нескольких коалиций}\index{схема разделения секрета!Бриккела|(}\index{схема!Бриккела|(}
 \selectlanguage{russian}
 
-Рассмотрим схему Брикелла (\langen{Ernest Francis Brickell},~\cite{Brickell:1990}) распределения секрета по коалициям.
+Рассмотрим схему Брикелла (\langen{Ernest Francis Brickell},~\cite{Brickell:1990}) разделения секрета по коалициям.
 
 По-прежнему
     \[ \{ U_1, U_2, \dots, U_N \} \]
@@ -96,4 +96,4 @@
     \[ K = 7 \cdot 4 + 12 \cdot 2 + 11 \cdot 4 = 4 \mod 23.\]
 \exampleend
 
-\index{схема распределение секрета!Бриккела|)}
+\index{схема разделения секрета!Бриккела|)}\index{схема!Бриккела|)}
