--- a/secret-sharing.tex
+++ b/secret-sharing.tex
@@ -1,4 +1,4 @@
-\chapter{Разделение секрета}
+\chapter{Разделение секрета}\index{схема!разделения секрета|(}
 \selectlanguage{russian}
 
 \section{Пороговые схемы}
@@ -104,3 +104,5 @@
 \exampleend
 
 \input{secret-sharing-brickells}
+
+\index{схема!разделения секрета|)}
