--- a/ipsec.tex
+++ b/ipsec.tex
@@ -1,7 +1,7 @@
-\section{Защита IPsec на сетевом уровне}
+\section{Защита IPsec на сетевом уровне}\index{протокол!IPsec|(}
 \selectlanguage{russian}
 
-Набор протоколов IPsec (\langen{Internet Protocol Security})\index{протокол!IPsec}~\cite{rfc4301} является неотъемлемой частью IPv6\index{протокол!IPv6} и дополнительным необязательным расширением IPv4. IPsec обеспечивает защиту данных на сетевом уровне IP-пакетов.
+Набор протоколов IPsec (\langen{Internet Protocol Security})~\cite{rfc4301} является неотъемлемой частью IPv6\index{протокол!IPv6} и дополнительным необязательным расширением IPv4. IPsec обеспечивает защиту данных на сетевом уровне IP-пакетов.
 
 IPsec определяет:
 \begin{itemize}
@@ -162,3 +162,4 @@ IPsec определяет:
 	\caption{Применение протокола AH к пакету IPv6\label{fig:ipsec-ah-modes}}
 \end{figure}
 
+\index{протокол!IPsec|)}
