Упрощение включения списка литературы в книгу

--- a/Information Security.tex
+++ b/Information Security.tex
@@ -462,11 +462,6 @@ NIST (Национальный институт стандартов и техн
 
 \printindex
 
-\chapter*{Литература}
-\addcontentsline{toc}{chapter}{Литература}
-\begingroup
-\renewcommand{\chapter}[2]{}%
-\printbibliography
-\endgroup
+\printbibliography[heading=bibintoc,title={Литература}]
 
 \end{document}
