--- a/protocols/index_only.tex
+++ b/protocols/index_only.tex
@@ -5,12 +5,7 @@
 
 \input{index}
 
-\chapter*{Литература}
-\addcontentsline{toc}{chapter}{Литература}
-\begingroup
-\renewcommand{\chapter}[2]{}%
-\printbibliography
-\endgroup
+\printbibliography[heading=bibintoc,title={Литература}]
 
 \end{document}
 
