Глава про разделение секрета выделена в подпапку для удобства редактирования

--- a/Information Security.tex
+++ b/Information Security.tex
@@ -90,7 +90,7 @@
 
 \subimport*{protocols/}{index}
 
-\input{secret-sharing}
+\subimport*{secret-sharing/}{index}
 
 \chapter{Примеры систем защиты}
 
