--- a/secret-sharing/brickells.tex
+++ b/secret-sharing/brickells.tex
@@ -1,4 +1,4 @@
-\subsection{Схема Брикелла для нескольких коалиций}\index{схема разделения секрета!Бриккела|(}\index{схема!Бриккела|(}
+\subsection{Схема разделения секрета Брикелла}\index{схема разделения секрета!Бриккела|(}\index{схема!Бриккела|(}
 \selectlanguage{russian}
 
 Рассмотрим схему Брикелла (\langen{Ernest Francis Brickell},~\cite{Brickell:1990}) разделения секрета по коалициям.
