--- a/secret-sharing/index.tex
+++ b/secret-sharing/index.tex
@@ -11,13 +11,13 @@
 
 Далее рассмотрены три случая: $(K, N)$-схема Блэкли, $(K, N)$-схема Шамира и простая $(N,N)$-схема.
 
-\input{secret-sharing-blackleys}
+\input{blackleys}
 
-\input{secret-sharing-shamirs}
+\input{shamirs}
 
-\input{secret-sharing-xor}
+\input{xor}
 
-\section{Распределение секрета по коалициям}
+\section{Распределение по коалициям}
 
 \subsection{Схема для нескольких коалиций}
 
@@ -103,6 +103,6 @@
 Тени выбираются случайно из кольца $\mathbb{\Z}_m$. В результате у пользователей будут тени. 
 \exampleend
 
-\input{secret-sharing-brickells}
+\input{brickells}
 
 \index{схема!разделения секрета|)}
