Обновление предметного указателя

--- a/appendix/euclidean_algorithm.tex
+++ b/appendix/euclidean_algorithm.tex
@@ -1,4 +1,4 @@
-\subsection{Алгоритм Евклида}\index{алгоритм!Евклида}
+\subsection{Алгоритм Евклида}\index{алгоритм!Евклида|(}
 \selectlanguage{russian}
 
 Рекурсивная форма алгоритма Евклида вычисления $\gcd(a,b)$ имеет следующий вид:
@@ -18,8 +18,9 @@
 \end{array} \]
 \exampleend
 
+\index{алгоритм!Евклида|)}
 
-\subsection{Расширенный алгоритм Евклида}\index{алгоритм!Евклида!расширенный}
+\subsection{Расширенный алгоритм Евклида}\index{алгоритм!Евклида!расширенный|(}
 
 \emph{Расширенный алгоритм Евклида} для целых $a, b: a > b$ находит\footnote{См., например,~\cite[8.8 Наибольшие общие делители и алгоритм Евклида]{Aho:1979}.}
     \[ x, y, d = \gcd(a,b): ax + by = d. \]
@@ -93,6 +94,8 @@
 \end{table}
 \exampleend
 
-Для $k$-битового числа $n$-битовая сложность вычисления обратного элемента имеет порядок $O(k^2)$. Если известно разложение числа $n$ на множители, то по теореме Эйлера
+Для $k$-битового числа $n$-битовая сложность вычисления обратного элемента имеет порядок $O(k^2)$. Если известно разложение числа $n$ на множители, то по теореме Эйлера\index{теорема!Эйлера}
     \[ a^{-1} = a^{\varphi(n) - 1} \mod n, \]
 и вычисление обратного элемента реализуется с битовой сложностью $O(k^3),~ k = \lceil \log_2 n \rceil$. Сложность вычислений по этому алгоритму можно уменьшить, если известно разложение на сомножители числа $\varphi(n) - 1$.
+
+\index{алгоритм!Евклида!расширенный|)}
