--- a/appendix/modular_ariphmetics.tex
+++ b/appendix/modular_ariphmetics.tex
@@ -14,10 +14,10 @@
         \hline
         1. $a \pm b \mod n$ & $O(k)$ \\
         2. $a \cdot b \mod n$ & $O(k^2)$ \\
-        3. $\gcd(a, b)$, алгоритм Евклида & $O(k^2)$ \\
-        4. $(a,b) \rightarrow (x,y,d) : ax + by = d = \gcd(a,b)$, расширенный алгоритм Евклида & $O(k^2)$ \\
-        5. $a^{-1} \mod n$, расширенный алгоритм Евклида & $O(k^2)$ \\
-        6. Китайская теорема об остатках & $O(k^2)$ \\
+        3. $\gcd(a, b)$, алгоритм Евклида\index{алгоритм!Евклида} & $O(k^2)$ \\
+        4. $(a,b) \rightarrow (x,y,d) : ax + by = d = \gcd(a,b)$, расширенный алгоритм Евклида\index{алгоритм!Евклида!расширенный} & $O(k^2)$ \\
+        5. $a^{-1} \mod n$, расширенный алгоритм Евклида\index{алгоритм!Евклида!расширенный} & $O(k^2)$ \\
+        6. Китайская теорема об остатках\index{теорема!китайская об остатках} & $O(k^2)$ \\
         7. $a^b \mod n$ & $O(k^3)$ \\
         \hline
     \end{tabular}
