--- a/_settings.tex
+++ b/_settings.tex
@@ -55,6 +55,11 @@
   sortlocale=ru_RU
 ]{biblatex}								% библиография по ГОСТу
 
+%Patch for Package inputenc Error: Unicode character
+\DefineBibliographyStrings{russian}{%
+number = {\textnumero}%
+}
+
 \newcommand{\indexchapter}[1]{%
 \chapter*{#1}%
 \addcontentsline{toc}{chapter}{#1}%
