Перенос главы про блочные шифры в отдельную папку для упрощения редактирования

--- a/Information Security.tex
+++ b/Information Security.tex
@@ -50,35 +50,7 @@
 
 \input{perfect_secure_systems}
 
-\chapter{Блочные шифры}\label{chapter-block-ciphers}\index{шифр!блочный|(}
-
-\input{block_ciphers}
-
-\input{lucifer}
-
-\input{Feistel_cipher}
-
-\input{DES}
-
-\input{GOST_28147-89}
-
-\input{AES}
-
-\input{GOST_R_34.12-2015}
-
-\input{Block_cipher_modes}
-
-\section{Некоторые свойства блочных шифров}
-
-\input{feistel_network_reversibility}
-
-\input{Feistel_cipher_without_s_blocks}
-
-\input{Avalanche_effect}
-
-\input{double_and_triple_ciphering}
-
-\index{шифр!блочный|)}
+\subimport*{block-ciphers/}{index}
 
 \input{generators}
 
