Унификация использования названия "человек-посередине" для MITM

--- a/protocols/attacks.tex
+++ b/protocols/attacks.tex
@@ -12,7 +12,7 @@
 Существует большое количество типов атак на протоколы. У многих атак есть некоторые общие принципы, что позволяет выделить классы атак для упрощения анализа и разработки протоколов, устойчивых к целым классам атак.
 
 \begin{itemize}
-    \item[MitM] <<Атака посередине>>\\*
+    \item[MITM] Атака <<человек посередине>>\index{атака!<<человек посередине>>}\\*
         \langen{man-in-the-middle attack}
     \item[{}] Класс атак, в котором злоумышленник ретранслирует и, при необходимости, изменяет все сообщения, проходящие между двумя и более участниками протокола, причём последние не знают о существовании злоумышленника, считая, что общаются непосредственно друг с другом. К данной атаке уязвимы все протоколы, которые не реализуют взаимную аутентификацию сторон (цель G1). Классическим примером атаки данного класса является атака на протокол Диффи~---~Хеллмана\index{протокол!Диффи~---~Хеллмана}, рассмотренном в разделе~\ref{section-protocols-diffie-hellman}.
 
