--- a/protocols/diffie-hellman.tex
+++ b/protocols/diffie-hellman.tex
@@ -28,12 +28,12 @@
 
 Протокол обеспечивает только генерацию новых сеансовых ключей (цель G10). В отсутствие третей доверенной стороны он не обеспечивает ни аутентификацию сторон (цель G1), из-за отсутствия проходов с подтверждением владения ключом отсутствует аутентификация ключа (цель G8). Зато, так как протокол не использует длительные <<мастер>>-ключи, можно говорить о том, что он обладает свойством совершенной прямой секретности (цель G9).
 
-Протокол можно использовать только с такими каналами связи, в которые не может вмешаться активный криптоаналитик. В противном случае протокол становится уязвим к простой <<атаке посередине>>.
+Протокол можно использовать только с такими каналами связи, в которые не может вмешаться активный криптоаналитик. В противном случае протокол становится уязвим к простой атаке <<человек посередине>>\index{атака!<<человек посередине>>}.
 
 \begin{figure}
     \centering
     \includegraphics[width=0.67\textwidth]{pic/key_distribution-diffie-hellman-mitm}
-    \caption{Схема взаимодействия участников в протоколе Диффи~---~Хеллмана в модели с активным криптоаналитиком\label{fig:key_distribution-diffie-hellman-mitm}}
+    \caption{Схема взаимодействия участников в протоколе Диффи~---~Хеллмана при атаке <<человек посередине>>\label{fig:key_distribution-diffie-hellman-mitm}}
 \end{figure}
 
 \begin{protocol}
