Небольшие дополнения про асимметричные протоколы

--- a/protocols/denning-sacco.tex
+++ b/protocols/denning-sacco.tex
@@ -1,7 +1,7 @@
 \subsection{Протокол Деннинга~---~Сакко}\index{протокол!Деннинга~---~Сакко|(}
 \selectlanguage{russian}
 
-Протокол предложен Дороти Деннинг и Джованни Сакко в 1981 году (\langen{Dorothy E. Denning, Giovanni Maria Sacco},~\cite{Denning:Sacco:1981}). В данном протоколе к доверенному центру (Тренту) за сертификатами сразу обоих участников обращается инициатор (Алиса, рис.~\ref{fig:denning-sacco}). Этот же участник отвечает и за формирование нового сессионного ключа $K$.
+Протокол было предложен в 1981 году сотрудниками Университета Пердью Дороти Деннинг и Джованни Марией Сакко (\langen{Dorothy E. Denning, Giovanni Maria Sacco},~\cite{Denning:Sacco:1981}). В данном протоколе к доверенному центру (Тренту) за сертификатами сразу обоих участников обращается инициатор (Алиса, рис.~\ref{fig:denning-sacco}). Этот же участник отвечает и за формирование нового сессионного ключа $K$.
 
 \begin{figure}
     \centering
@@ -26,7 +26,7 @@ Alice \to \{ & E_B( S_A ( K, T_A ) ), & \\
 \begin{figure}
     \centering
     \includegraphics[width=0.67\textwidth]{pic/denning-sacco-attack}
-    \caption{Взаимодействие участников в протоколе Деннинга~---~Сакко\label{fig:denning-sacco-attack}}
+    \caption{Взаимодействие участников в протоколе Деннинга~---~Сакко при атаке с известным разовым ключом\label{fig:denning-sacco-attack}}
 \end{figure}
 
 \begin{protocol}
