Описан протокол B92 / BB92

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -790,6 +790,20 @@
     month       = {3},
 }
 
+@article{Bennett:1992,
+    title       = {Quantum cryptography using any two nonorthogonal states},
+    author      = {Bennett, Charles H.},
+    journal     = {Phys. Rev. Lett.},
+    volume      = {68},
+    issue       = {21},
+    pages       = {3121--3124},
+    year        = {1992},
+    month       = {5},
+    publisher   = {American Physical Society},
+    doi         = {10.1103/PhysRevLett.68.3121},
+    url         = {https://link.aps.org/doi/10.1103/PhysRevLett.68.3121}
+}
+
 @article{Diffie:Oorschot:Wiener:1992,
     author      = {Diffie, Whitfield and Van Oorschot, Paul C. and Wiener, Michael J.},
     title       = {Authentication and authenticated key exchanges},
