--- a/protocols/quantum.tex
+++ b/protocols/quantum.tex
@@ -144,7 +144,60 @@
 
 Интересен также вариант, когда Ева может изменять информацию, передаваемую не только по оптическому, но и по классическому каналам связи. В этом случае многое зависит от того, в какую сторону (от чьего имени) Ева может подделывать сообщения. В самом негативном сценарии, когда Ева может выдать себя и за Алису, и за Боба, будет иметь место полноценная атака <<человек посередине>>\index{атака!<<человек посередине>>} (MITM), от которой невозможно защититься никаким способом, если не использовать дополнительные защищённые каналы связи или не основываться на информации, переданной заранее. Однако, это будет уже совсем другой протокол.
 
+\index{протокол!BB84|)}
+
+\subsection{Протокол B92 (BB92)}\index{протокол!B92|(}\index{протокол!BB92|(}
+В 1992 году один из авторов протокола BB84 Чарльз Беннетт выдвинул идею (\cite{Bennett:1992}), что участникам не обязательно использовать четыре разных варианта поляризации, а достаточно двух, но неортогональных. Например, $0^{\circ}$ (<<$\to$>>) и $45^{\circ}$ (<<$\nearrow$>>). Протокол получил названия B92 и BB92.
+
+Для каждого бита выполняется следующее.
+
+\begin{protocol}
+    \item[(1)] Алиса поляризует фотон в зависимости от бита $b_i$ и передаёт его по квантовому каналу связи Бобу:
+        \begin{itemize}
+            \item для $b_i=0$ поляризует под $0^{\circ}$ (<<$\to$>>);
+            \item для $b_i=1$ поляризует под $45^{\circ}$ (<<$\nearrow$>>).
+        \end{itemize}
+    \item[(2)] Боб случайным образом выбирает один из двух базисов: $90^{\circ}$ (<<$\uparrow$>>) или $135^{\circ}$ (<<$\nwarrow$>>), и пробует детектировать фотон. Если получилось, то он делает вывод о выбранной Алисой поляризации фотона и бите $b_i$:
+        \begin{itemize}
+            \item если детектировал на $135^{\circ}$ (<<$\nwarrow$>>), значит Алиса выбрала поляризацию $0^{\circ}$ (<<$\to$>>) и $b_i=0$;
+            \item если детектировал на $90^{\circ}$ (<<$\uparrow$>>), значит Алиса выбрала поляризацию $45^{\circ}$ (<<$\nearrow$>>) и $b_i=1$.
+        \end{itemize}
+    \item[{}] Боб по открытому классическому каналу связи сообщает Алисе, получилось детектировать фотон или нет. Если да, то бит принимается участниками за переданный.
+\end{protocol}
+
+\begin{table}
+    \centering
+    \begin{tabular}{|l|c|c|c|c|c|c|c|c|}
+        \hline
+        \parbox[c][1cm][c]{2,8cm}{биты Алисы} & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 \\
+        \hline
+        \parbox[c][1cm][c]{2,8cm}{поляризация \\ фотона} & $\to$ & $\to$ & $\to$ & $\to$ & $\nearrow$ & $\nearrow$ & $\nearrow$ & $\nearrow$ \\
+        \hline
+        \parbox[c][1cm][c]{2,8cm}{поляризация \\ детектора Боба} & $\nwarrow$ & $\uparrow$ & $\nwarrow$ & $\uparrow$ & $\nwarrow$ & $\uparrow$ & $\nwarrow$ & $\uparrow$ \\
+        \hline
+        \parbox[c][1cm][c]{2,8cm}{вероятность детектирования} & $\frac{1}{2}$ & 0 & $\frac{1}{2}$ & 0 & 0 & $\frac{1}{2}$ & 0 & $\frac{1}{2}$ \\
+        \hline
+        \parbox[c][1cm][c]{2,8cm}{удалось или нет детектировать} & да & нет & нет & нет & нет & да & нет &  нет \\
+        \hline
+        \parbox[c][1cm][c]{2,8cm}{принятые Бобом биты} & 0 & - & - & - & - & 1 & - & - \\
+        \hline
+    \end{tabular}
+    \caption{Пример сеансов протокола B92 / BB92. По итогам передачи 8 фотонов от Алисы Боб сумел детектировать 2 фотона, что позволило передать от Алисы к Бобу 2 бита информации}
+    \label{tab:b92}
+\end{table}
+
+Если Боб выбрал поляризацию, ортогональную оригинальной, то он со 100\% вероятностью не зарегистрирует фотон. Если же поляризация неортогональна оригинальной, то с вероятностью 50\% Боб сумеет зарегистрировать фотон на детекторе. Таким образом, если Боб зарегистрировал фотон, то он будет точно знать, какой бит передавала Алиса. Если же не зарегистрировал, то это трактуется, как стирание.
+
+Пример сеансов протоколов передачи приведён в таблице~\ref{tab:b92}.
+
+В среднем для передачи одного бита информации Алисе и Бобу потребуется провести 4 итерации протокола. Это в два раза больше, чем в протоколе BB84\index{протокол!BB84}.
+
+\index{протокол!B92|)}\index{протокол!BB92|)}
+
+\subsection{Общие недостатки квантовых протоколов}
+
 Подводя итоги, можно сказать, что квантовые протоколы распределения ключей (а именно ими пока что и ограничивается вся известная на сегодняшний день <<квантовая криптография>>) обладают как определёнными преимуществами, так и фатальными недостатками, затрудняющими их использование (и ставящими под вопрос саму эту необходимость):
+
 
 \begin{itemize}
 	\item Любые квантовые протоколы (как и вообще любые квантовые вычисления) требуют оригинального дорогостоящего оборудования, которое пока что нельзя сделать частью commodity-устройств или обычного сотового телефона.
@@ -153,5 +206,5 @@
 	\item Для всех протоколов особую проблему представляет не только доказательство корректности (что является весьма нетривиальным делом в случае наличия <<добросовестных>> помех), но и инженерная задача по реализации протокола в <<железе>>. В качестве краткой иллюстрации, например, не существует простого способа создать \emph{ровно один} фотон. Недогенерация фотонов приводит, очевидно, к ошибкам передачи, а генерация дубля в том же временном слоте -- к возможности его перехвата злоумышленником без создания помех в канале.
 \end{itemize}
 
-\index{протокол!BB84|)}
 \index{протокол!квантовые|)}
+
