Описана модификация Lo05

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1125,6 +1125,16 @@
 	url			= {http://www.avispa-project.org/delivs/6.1/d6-1/node3.html},
 }
 
+@misc{Lo:Ma:Chen:2004,
+    title       = {Decoy State Quantum Key Distribution},
+    author      = {Lo, Hoi-Kwong and Ma, Xiongfeng and Chen, Kai},
+    year        = {2004},
+    month       = {10},
+    eprint      = {quant-ph/0411004},
+    archivePrefix={arXiv},
+    primaryClass= {quant-ph},
+}
+
 @misc{MS-VBRAND:2004,
 	year		= {2004},
 	title		= {INFO: How Visual Basic Generates Pseudo-Random Numbers for the RND Function},
@@ -1200,6 +1210,19 @@
 	isbn		= {978-0-201-85392-6},
 	publisher	= {Addison-Wesley Professional},
 	language	= {English},
+}
+
+@article{Lo:Ma:Chen:2005,
+    title       = {Decoy State Quantum Key Distribution},
+    volume      = {94},
+    ISSN        = {1079--7114},
+    DOI         = {10.1103/physrevlett.94.230504},
+    number      = {23},
+    journal     = {Physical Review Letters},
+    publisher   = {American Physical Society (APS)},
+    author      = {Lo, Hoi-Kwong and Ma, Xiongfeng and Chen, Kai},
+    year        = {2005},
+    month       = {6},
 }
 
 @inproceedings{Watanabe:Matsumoto:Uyematsu:2005,
