Добавлен вопрос про JWT.

--- a/appendix/questions-5.tex
+++ b/appendix/questions-5.tex
@@ -27,6 +27,6 @@
 
     \item База данных на основе Echo-сети. Blockchain. Доказательство работы (proof-of-work, proof-of-share). BitCoin.
     \item Аутентификация в WEB. Basic, Digest, Cookie-аутентификация. Использование HTTPS для аутентификации клиента.
-    \item Аутентификация в WEB. Протокол OAuth 2.0.
+    \item Аутентификация в WEB. Протокол OAuth 2.0. Использование JWT.
 
 \end{enumerate}
